--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_riverpod: ^2.3.7
   fpdart: ^1.1.0
   flutter_svg: ^2.0.7
+  firebase_storage: ^11.2.6
+  image_picker: ^1.0.2
+  file_picker: ^5.3.3
 
 dev_dependencies:
   flutter_test:
