--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.2.6
   image_picker: ^1.0.2
   file_picker: ^5.3.3
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
